# festcat-voice-builder

./: .gitignore  Makefile.in  README.md  configure  configure.ac  create_ca_samples.sh  text_samples_ca.txt
data/ca/: Makefile.in  speakerprop.sh
data/ca/template/: INSTALL  Makefile.in  configure  configure.ac
data/ca/template/data/: Makefile.in
data/ca/template/data/configs/: ca.talk.conf
data/ca/template/data/questions/: questions_qst002.hed
data/ca/template/data/scripts/: DNNDefine.py  addhtkheader.pl  label-full.awk  label.feats  select_phoneset.scm
data/ca/template/package/: Makefile.in  configure.ac  configure.in
data/ca/template/package/doc/: AUTHORS  AUTHORS.ca  README.md  THANKS.ca.md
data/ca/template/package/festvox/: upc_ca_SPEAKER_hts.scm
data/ca/template/scripts/: Config.pm.in  Training.pl
data/ca/template_hts/data/configs/: ca.talk.conf
data/ca/template_hts/data/scripts/: select_phoneset.scm
data/ca/template_package/skeleton/doc/: README.ca.md  THANKS.md
data/ca/template_package/skeleton/festvox/: upc_ca_SPEAKER_hts.scm
data/en/: Makefile.in  speakerprop.sh
data/en/template/: INSTALL  Makefile.in  configure  configure.ac
data/en/template/data/: Makefile.in  README
data/en/template/data/configs/: en_US.talk.conf
data/en/template/data/scripts/: DNNSynthesis.py  DNNTraining.py  label-mono.awk
data/en/template/package/: Makefile.in  configure.ac
data/en/template/package/festvox/: cmu_us_SPEAKER_arctic_duration.scm  cmu_us_SPEAKER_arctic_durdata.scm  cmu_us_SPEAKER_arctic_f0model.scm  cmu_us_SPEAKER_arctic_hts.scm  cmu_us_SPEAKER_arctic_intonation.scm  cmu_us_SPEAKER_arctic_lexicon.scm  cmu_us_SPEAKER_arctic_other.scm  cmu_us_SPEAKER_arctic_phoneset.scm  cmu_us_SPEAKER_arctic_phrasing.scm  cmu_us_SPEAKER_arctic_tagger.scm  cmu_us_SPEAKER_arctic_tokenizer.scm
data/en/template/scripts/: Config.pm.in  Training.pl
data/en/template_hts/data/scripts/: DNNDataIO.py  normtext.pl  select_phoneset.scm  window.pl
data/en/template_package/skeleton/festvox/: cmu_us_SPEAKER_hts.scm  cmu_us_SPEAKER_lexicon.scm  cmu_us_SPEAKER_phoneset.scm  cmu_us_SPEAKER_phrasing.scm  cmu_us_SPEAKER_tagger.scm  cmu_us_SPEAKER_tokenizer.scm
data/fr/: Makefile.in  fix_labels.py  speakerprop.sh
data/fr/template_hts/data/: Makefile.in
data/fr/template_hts/data/configs/: fr.talk.conf
data/template_hts/: Makefile.in
data/template_hts/data/: Makefile.in
data/template_hts/data/scripts/: extra_feats.scm  makefilter.pl
data/template_hts/scripts/: Training.pl
data/template_package/: Makefile.in
data/template_package/skeleton/: Makefile.in  configure.ac
